test/corpus/directive/input.txt
====================================
no attribute
====================================

.input edge

---

(source_file
  (directive
    (directive_qualifier)
    (qualified_name
      (identifier))))

====================================
one attribute
====================================

.input edge(IO=file)

---

(source_file
  (directive
    (directive_qualifier)
    (qualified_name
      (identifier))
    (directive_attribute_assignment
      (identifier)
      (directive_value
        (identifier)))))


====================================
multiple attributes
====================================

.input edge(IO=file, filename="path/to/infile", columns="4:7", delimiter=",")

---

(source_file
  (directive
    (directive_qualifier)
    (qualified_name
      (identifier))
    (directive_attribute_assignment
      (identifier)
      (directive_value
        (identifier)))
    (directive_attribute_assignment
      (identifier)
      (directive_value
        (string_literal)))
    (directive_attribute_assignment
      (identifier)
      (directive_value
        (string_literal)))
    (directive_attribute_assignment
      (identifier)
      (directive_value
        (string_literal)))))
